[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rivt"
version = "0.1.0"
description = "Enforce architectural rules in your codebase."
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
rivt = "rivt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "RET", "PIE", "RUF", "T20"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"src/rivt/rules/__init__.py" = ["E402"]
"src/rivt/cli.py" = ["T201"]
"src/rivt/config.py" = ["T201"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]